<resources>
    <string name="app_name">UpWhat</string>
    <string name="welcome_to">Welcome To</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="agreement_text">Read our <a href="https://google.com">Privacy Policy</a>. Tap \'Agree and Continue\' to accept that you understand what <a href="https://google.com">this page</a> says.</string>
    <string name="get_logged_in">Get logged in</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="waiting_for_approval">Waiting for approval...</string>
    <string name="waiting_for_approval_text">An email is sent to your email address that contains a login code. Enter that code in the box below to complete this login.\nPlease check your spam folder if you don\'t find the email.</string>
    <string name="enter_login_code">Enter login code</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="display_name">Display Name</string>
    <string name="biography">Biography</string>
    <string name="finish">Finish</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="new_chat">New Chat</string>
    <string name="start_a_new_conversation">Start a new conversation</string>
    <string name="new_conversation">New Conversation</string>
    <string name="profile">Profile</string>
    <string name="more_options">More Options</string>
    <string name="tap_to_add_biography">[TAP TO ADD BIOGRAPHY]</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="view_profile_picture">View Profile Picture</string>
    <string name="view_profile">View Profile</string>
    <string name="starter_line">All the messages and calls are end-to-end encrypted. No one outside of this chat, not even UpWhat, can read or listen to them.</string>
    <string name="enter_email_for_conversation">Enter the email address of the person you want to have conversation with.</string>
    <string name="add">Add</string>
</resources>