<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="25dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@drawable/dialog_default_background">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="@font/oswald_bold"
        android:textColor="#008037"
        android:textSize="19sp"
        android:text="@string/waiting_for_approval"/>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_regular"
        android:textColor="#00b94f"
        android:textSize="13sp"
        android:text="@string/waiting_for_approval_text"/>

    <EditText
        android:id="@+id/LoginApprovalDialog_CodeInput"
        android:autofillHints="none"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textColor="@color/black"
        android:textColorHint="#d9d9d9"
        android:fontFamily="@font/oswald_regular"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_login_code_box_background"
        android:hint="@string/enter_login_code"/>

    <TextView
        android:id="@+id/LoginApprovalDialog_DoneButton"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="@font/oswald_bold"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@drawable/done_button_background"/>

</LinearLayout>