<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostLoginUpdateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.14"
                android:background="#004aad" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/activity_post_login_update_profile_toolbar_background"
                android:fontFamily="@font/oswald_bold"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/complete_your_profile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="23sp" />

        </RelativeLayout>

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user_icon"
            android:contentDescription="@string/profile_picture"
            android:layout_marginTop="-100dp"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <EditText
            android:maxLength="50"
            android:id="@+id/PLUP_DisplayName"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textSize="20sp"
            android:fontFamily="@font/oswald_regular"
            android:inputType="textCapWords"
            android:hint="@string/display_name"
            android:imeOptions="actionNext"
            android:textColorHint="#d9d9d9"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:autofillHints="name"
            android:background="@drawable/activity_post_login_update_profile_input_box_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/PLUP_Biography"
            android:gravity="start|top"
            android:maxLength="200"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textSize="20sp"
            android:fontFamily="@font/oswald_regular"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/biography"
            android:imeOptions="actionDone"
            android:textColorHint="#d9d9d9"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:lines="4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:autofillHints="name"
            android:background="@drawable/activity_post_login_update_profile_input_box_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/PLUP_FinishButton"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/finish"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/oswald_bold"
        android:background="@drawable/activity_post_login_update_profile_finish_button_background"/>

</LinearLayout>