<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgreementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary">

        <TextView
            android:fontFamily="@font/oswald_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textAllCaps="true"
            android:textColor="#dbffc9"
            android:gravity="center"
            android:paddingTop="15dp"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_bold"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/app_logo"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/agreement_text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Agreement_AgreementText"
            android:textSize="13sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dark_grey"/>

        <TextView
            android:id="@+id/Agreement_ContinueButton"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_and_continue"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/oswald_regular"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:background="@drawable/agree_and_continue_button_background"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</LinearLayout>